1.3.18
	+ Add version comparing function and use it instead of 'gt' in the
	  general widget
1.3.17
	+ Minor bug fix: check if value is defined in EBox::Type::Union
1.3.16
	+ Move enable field to first row in ConfigureDispatcherDataTable
	+ Add a warning to let users know that a module with unsaved changes
	  is disabled
	+ Remove events migration directory:
		- 0001_add_conf_configureeventtable.pl
		- 0002_add_conf_diskfree_watcher.pl
	+ Bug fix: We don't use names to stringify date to avoid issues
	  with DB insertions and localisation in event logging
	+ Bug fix: do not warn about disabled services which return false from
	  showModuleStatus()
	+ Add blank line under "Module Status"
	+ Installed and latest available versions of the core are now displayed
	  in the General Information widget
1.3.15
	+ Bug fix: Call EBox::Global::sortModulesByDependencies when
	  saving all modules and remove infinite loop in that method.
	  EBox::Global::modifiedModules now requires an argument to sort
	  its result dependending on enableDepends or depends attribute.
	+ Bug fix: keep menu folders open during page reloads
	+ Bug fix: enable the log events dispatcher by default now works
	+ Bug fix: fixed _lock function in EBox::Module::Base
	+ Bug fix: composites honor menuFolder()
	+ Add support for in-place edition for boolean types. (Closes
	  #1664)
	+ Add method to add new database table columnts to EBox::Migration::Helpers
	+ Bug fix: enable "Save Changes" button after an in-place edition
1.3.14
	+ Bug fix: fix critical bug in migration helper that caused some log
	  log tables to disappear
	+ Create events table
	+ Bug fix: log watcher works again
	+ Bug fix: delete cache if log index is not found as it could be
	  disabled
1.3.13
	+ Bug fix: critical error in EventDaemon that prevented properly start
	+ Cron script for manage logs does not run if another is already
	  running, hope that this will avoid problems with large logs