@@ -66,7 +66,7 @@ sub _create
     my $class = shift;
 
     my $self = $class->SUPER::_create(name => 'ebackup',
-            printableName => __('Backup'),
+            printableName => __n('Backup'),
             domain => 'ebox-ebackup',
             @_);
 
