@@ -46,7 +46,7 @@ sub _create
 {
     my $class = shift;
     my $self = $class->SUPER::_create(name => 'egroupware',
-            printableName => __('Groupware'),
+            printableName => __n('Groupware'),
             domain => 'ebox-egroupware',
             @_);
 }
