@@ -48,7 +48,7 @@ sub _create
 {
     my $class = shift;
     my $self = $class->SUPER::_create(name => 'l7-protocols',
-            printableName => __('Application Protocols'),
+            printableName => __n('Application Protocols'),
             domain => 'ebox-l7-protocols',
             @_);
     bless($self, $class);
