@@ -69,7 +69,7 @@ sub _create
 {
     my $class = shift;
     my $self = $class->SUPER::_create(name => 'monitor',
-                                      printableName => __('Monitor'),
+                                      printableName => __n('Monitor'),
                                       domain => 'ebox-monitor',
                                       @_);
     bless($self, $class);
