@@ -67,7 +67,9 @@ sub _create
 {
     my $class = shift;
     my $self =
-      $class->SUPER::_create(name => 'openvpn', printableName => __('VPN'));
+      $class->SUPER::_create(name => 'openvpn',
+        domain => 'ebox-openvpn',
+        printableName => __('VPN'));
     bless($self, $class);
     return $self;
 }
@@ -1606,10 +1608,6 @@ sub restoreConfig
 }
 
 # log observer stuff
-sub domain
-{
-    return 'ebox-openvpn';
-}
 
 sub logHelper
 {
