@@ -67,7 +67,7 @@ sub _create
     my $class = shift;
     my $self  = $class->SUPER::_create(name => 'squid',
                                        domain => 'ebox-squid',
-                                       printableName => __('HTTP Proxy'),
+                                       printableName => __n('HTTP Proxy'),
                                        @_);
     $self->{logger} = EBox::logger();
     bless ($self, $class);
