@@ -74,7 +74,7 @@ sub _create
 {
     my $class = shift;
     my $self = $class->SUPER::_create(name => 'users',
-                                      printableName => __('Users and Groups'),
+                                      printableName => __n('Users and Groups'),
                                       domain => 'ebox-usersandgroups',
                                       @_);
 
